--- a/src/scss/QuizCard.module.scss
+++ b/src/scss/QuizCard.module.scss
@@ -1,14 +1,20 @@
 $height: 6rem;
 
 .container {
-  width: clamp(600px);
+  margin-top: 1rem;
   padding: 1rem;
   background-color: #fafafa;
   box-shadow: 3px 3px 7px 1px #0001;
+
+  transform: none;
+  transition: transform cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.3s,
+    box-shadow cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.3s;
 }
 
 .container:hover {
   cursor: pointer;
+  transform: scale(1.1, 1.1);
+  box-shadow: 3px 3px 7px 10px #0001;
 }
 
 .author {
@@ -22,4 +28,12 @@ $height: 6rem;
   font-weight: normal;
   color: #545c52;
   margin: 0;
+}
+
+@media screen and (max-width: 700px) {
+  .container:hover {
+    cursor: pointer;
+    transform: scale(1.05, 1.05);
+    box-shadow: 3px 3px 7px 6px #0001;
+  }
 }
